--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Mac specific
+
+.DS_Store
+
 
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
